# function-vectors-nlp-299e-gemini

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
dataset_files/abstractive/: xsum.json
dataset_files/extractive/: cnn.json
datasets/: .gitignore  README.md  icl_prompts.json
logs/: execution_gemini_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_gemini_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.tex  references.bib
paper_draft/commands/: macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_search_results/: Function_Vectors_in_Large_Language_Models_summarization_20260329_234419.jsonl  function_vectors_large_language_model_github_repository_20260329_235540.jsonl  summarization_constraints_large_language_model_internal_representation_20260329_235000.jsonl
papers/: README.md
src/: data_setup.py  eval_rouge.py  extract.py
